Muchos cambios y todo en pinzas

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -15,7 +15,6 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/vendor/jquery.mobilemenu.js"></script>
-
     <!-- Script mobileMenu -->
     <script>
       $(function(){
@@ -29,147 +28,65 @@
         });
       })
     </script>
-    <!--/ Script mobileMenu -->
 </head>
 
 <body>
 <section id="contenedor">
-<header id="header">
-  <figure id="logo">
-    <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
-   <h1>IniciaGit</h1>
-   <h2>Cómo empezar con GitHub</h2>
-  </figure>
-  <nav class="menu">
-     <ul id='mobileMenu'>
-         <li><a href="empezando_con_github">Empezando con GitHub</a>
-            <ul>
-                <li><a href="instalar_github">Instalar GitHub</a></li>
-                <li><a href="identificarte como usuario">Identificarte como usuario</a></li>
-            </ul>
-         </li>
-         <li><a href="trabajando_con_github">Trabajando con GitHub</a>
-            <ul>
-                <li><a href="crear_repo_en_github">Crear repo en GitHub</a></li>
-                <li><a href="crear_repo_en_local">Crear repo en local</a></li>
-                <li><a href="enlazar_repo_local_con_github">Enlazar repo local con GitHub</a></li>
-                <li><a href="hacer_cambios_en_la_repo_local">Hacer cambios en la repo local</a></li>
-                <li><a href="mandar_los_cambios_a_github">Mandar los cambios a GitHub</a></li>
-            </ul>
-         </li>
-         <li><a href="colaborando_con_github">Colaborando con GitHub</a>
-            <ul>
-                <li><a href="hacer_fork_a_un_proyecto">Hacer Fork a un proyecto</a></li>
-                <li><a href="clonar_el_proyecto_en_local">Clonar el proyecto en local</a></li>
-                <li><a href="hacer_cambios_en_local">Hacer cambios en local</a></li>
-                <li><a href="mandar_los_cambios_a_github">Mandar los cambios a GitHub</a></li>
-                <li><a href="hacer_un_pull_request">Hacer un Pull request</a></li>
-            </ul>
-         </li>
-         <li><a href="merge_con_github">Merge con GitHub</a>
-            <ul>
-                <li><a href="localizar_pull_request">Localizar Pull request</a></li>
-                <li><a href="hacer_merge">Hacer Merge</a></li>
-            </ul>
-         </li>
-     </ul>
-  </nav>
-</header> 
-<section id="home">
-  <article id="empezando_con_github">
-      <h1>Empezando con GitHub</h1>
-      <h2>Instalar GitHub</h2>
-      <p>Descargar GitHub para tu SO</p>
-      <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-      <pre>
-      <div class="ventana_ternminal">
-        <div class="terminal">Terminal</div>
-      </div>
-          <span>git —version</span>
-      </pre>  
-      <p>
-               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
-             </p>       
-  </article>
 
-  <article id="instalar_github">
-      <h1>Empezando con GitHub</h1>
-      <h2>Instalar GitHub</h2>
-      <p>Descargar GitHub para tu SO</p>
-      <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-      <pre>
-      <div class="ventana_ternminal">
-        <div class="terminal">Terminal</div>
-      </div>
-          <span>git —version</span>
-      </pre>  
-      <p>
-               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
-             </p>       
-  </article>
-  <article id="identificarte como usuario">
-      <h1>Empezando con GitHub</h1>
-      <h2>Instalar GitHub</h2>
-      <p>Descargar GitHub para tu SO</p>
-      <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-      <pre>
-      <div class="ventana_ternminal">
-        <div class="terminal">Terminal</div>
-      </div>
-          <span>git —version</span>
-      </pre>  
-      <p>
-               <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dicta rem voluptatibus ipsam ipsa officiis consequuntur incidunt saepe sapiente recusandae dolores ab eveniet deserunt. Nam, sed earum quisquam porro veritatis.</span>
-               <span>Accusamus, quas, vel nemo repellat dignissimos quisquam illum incidunt quia tenetur quidem vitae ducimus nesciunt asperiores consequuntur ipsum at dolores possimus molestias. Laborum, quaerat assumenda velit odio explicabo doloremque animi.</span>
-               <span>Unde, voluptatum, necessitatibus commodi aut mollitia quae dicta reiciendis in consequatur totam architecto ipsum veniam hic doloribus recusandae harum optio asperiores iusto dolore deleniti omnis molestiae odio eius aliquid nisi.</span>
-               <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-               <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-               <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
-             </p>       
-  </article>
+  <header id="header">
+    <figure id="logo">
+      <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
+     <h1>IniciaGit</h1>
+     <h2>Cómo empezar con GitHub</h2>
+    </figure>
+    <nav class="menu">
+        <ul id='mobileMenu'>
+          <li><a href="#uno">Instalar GitHub</a></li>
+          <li><a href="#dos">Identificarte como usuario</a></li>
+        </ul>
+    </nav>
+  </header> 
 
-  <article id="trabajando"></article>
-  <article id="colaborando"></article>
-  <article id="merge"></article>
+  <section id="home">
+    <div class="clsContenido">
+      <article>
+        <h1 id="uno">Empezando con GitHub</h1>
+        <h2>Instalar GitHub</h2>
+        <p>Descargar GitHub para tu SO</p>
+        <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+        <pre>
+        <div class="ventana_ternminal">
+          <div class="terminal">Terminal</div>
+        </div>
+            <span>git —version</span>
+        </pre>  
+        <p>
+           <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
+           <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
+           <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
+         </p>       
+      </article>
+
+      <article>
+        <h1 id="dos">Empezando con GitHub</h1>
+        <h2>Instalar GitHub</h2>
+        <p>Descargar GitHub para tu SO</p>
+        <p>Comprovar que se ha instalado GitHub en el ordenador</p>
+        <pre>
+        <div class="ventana_ternminal">
+          <div class="terminal">Terminal</div>
+        </div>
+            <span>git —version</span>
+        </pre>  
+        <p>
+           <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
+         </p>       
+      </article>
+    </div>
   </section>
+
 </section>
-
-<script>
-  var num = 10; //number of pixels before modifying styles
-
-  $(window).bind('scroll', function () {
-      if ($(window).scrollTop() > num) {
-          $('.menu').addClass('fixed');
-      } else {
-          $('.menu').removeClass('fixed');
-      }
-  });
-</script>
+<script type="text/javascript" src="js/vendor/scrolltop.js"></script>
 <script>
   var num = 163; //number of pixels before modifying styles
 
