--- a/produccion/index.html
+++ b/produccion/index.html
@@ -48,43 +48,75 @@
   </header> 
 
   <section id="home">
-    <div class="clsContenido">
-      <article>
-        <h1 id="uno">Empezando con GitHub</h1>
-        <h2>Instalar GitHub</h2>
-        <p>Descargar GitHub para tu SO</p>
-        <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-        <pre>
-        <div class="ventana_ternminal">
-          <div class="terminal">Terminal</div>
-        </div>
-            <span>git —version</span>
-        </pre>  
-        <p>
-           <span>Ipsum, eligendi, consequuntur quibusdam mollitia cum perferendis quam earum enim ducimus doloremque dolore eveniet laborum quo natus aspernatur tenetur sequi nesciunt eos rem necessitatibus aliquid nemo porro reprehenderit. Reiciendis, est!</span>
-           <span>Repudiandae, placeat dolorum voluptatem dolorem debitis tenetur rerum eius. Ipsum, asperiores tempore harum itaque eius nam facere? Beatae, tempore, sapiente iusto ipsum architecto repellendus ducimus quo accusamus quibusdam labore cumque.</span>
-           <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
-         </p>       
-      </article>
+    <article>
+      <h1 id="uno">Empezando con GitHub</h1>
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
 
-      <article>
-        <h1 id="dos">Empezando con GitHub</h1>
-        <h2>Instalar GitHub</h2>
-        <p>Descargar GitHub para tu SO</p>
-        <p>Comprovar que se ha instalado GitHub en el ordenador</p>
-        <pre>
-        <div class="ventana_ternminal">
-          <div class="terminal">Terminal</div>
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architectoFugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
         </div>
-            <span>git —version</span>
-        </pre>  
-        <p>
-           <span>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</span>
-         </p>       
-      </article>
-    </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>   
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
+        </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>  
+
+      <!-- Botones sociales -->
+      <div class='social'>
+        <div class='boton_twitter'>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+        <div class='boton_google'>
+          <div class="g-plusone" data-size="medium" data-href="http://asiestudio.site88.net/git"></div>
+        </div>
+      </div>
+      <!--/ Botones sociales -->
+    </article>
   </section>
-
 </section>
 <script type="text/javascript" src="js/vendor/scrolltop.js"></script>
 <script>
@@ -97,6 +129,10 @@
           $('.menu').removeClass('fixed');
       }
   });
+</script>
+
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+  {lang: 'es'}
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
