Reordenando CSS con anidado LESS + Solo quedan la vista escritorio y movil

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -33,21 +33,90 @@
 <body>
 <section id="contenedor">
 
-  <header id="header">
+<!--   <header id="header">
     <figure id="logo">
       <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
      <h1>IniciaGit</h1>
      <h2>Cómo empezar con GitHub</h2>
     </figure>
+    
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Instalar GitHub</a></li>
           <li><a href="#dos">Identificarte como usuario</a></li>
         </ul>
     </nav>
-  </header> 
+  </header>  -->
 
   <section id="home">
+    <article>
+      <h1 id="uno">Empezando con GitHub</h1>
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architectoFugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
+        </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>   
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
+        </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>  
+
+      <!-- Botones sociales -->
+      <div class='social'>
+        <div class='boton_twitter'>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+        <div class='boton_google'>
+          <div class="g-plusone" data-size="medium" data-href="http://asiestudio.site88.net/git"></div>
+        </div>
+      </div>
+      <!--/ Botones sociales -->
+    </article>
     <article>
       <h1 id="uno">Empezando con GitHub</h1>
       <h2><span>Instalar</span> GitHub</h2>
