Mejorada la hubicación del header y el secction

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -33,20 +33,20 @@
 <body>
 <section id="contenedor">
 
-<!--   <header id="header">
+  <header id="header">
     <figure id="logo">
       <img src="img/logo.png" alt="IniciaGit" width="577" height="577" />
      <h1>IniciaGit</h1>
-     <h2>Cómo empezar con GitHub</h2>
+     <h2>Hacer un commit es como pegar un tiro </h2>
     </figure>
-    
+
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Instalar GitHub</a></li>
           <li><a href="#dos">Identificarte como usuario</a></li>
         </ul>
     </nav>
-  </header>  -->
+  </header> 
 
   <section id="home">
     <article>
@@ -118,7 +118,7 @@
       <!--/ Botones sociales -->
     </article>
     <article>
-      <h1 id="uno">Empezando con GitHub</h1>
+      <h1 id="dos">Empezando con GitHub</h1>
       <h2><span>Instalar</span> GitHub</h2>
       <ul>
         <li>Descargar GitHub para tu SO</li>
