Cambio del subtítulo

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>IniciaGit: Cómo empezar con GitHub</title>
+	<title>IniciaGit: Hacer un commit es como disparar un revolver</title>
 
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Lobster|Quicksand:300|Raleway:400,700' rel='stylesheet' type='text/css' />
