--- a/produccion/index.html
+++ b/produccion/index.html
@@ -42,8 +42,51 @@
 
     <nav class="menu">
         <ul id='mobileMenu'>
-          <li><a href="#uno">Instalar GitHub</a></li>
-          <li><a href="#dos">Identificarte como usuario</a></li>
+          <li><a href="#uno">Descripción de la guía</a></li>
+          <li><a href="#dos">Comandos básicos de terminal</a>
+            <ul>
+              <li><a href="#tres">Ver contenido del directorio</a></li>
+              <li><a href="">Hubicarse en un directorio</a></li>
+              <li><a href="">Crear nuevo directorio</a></li>
+            </ul>
+          </li>
+          <li><a href="#dos">Empezar con GitHub</a>
+            <ul>
+              <li><a href="">Crear una cuenta en GitHub</a></li>
+              <li><a href="">Instalar GitHub</a></li>
+              <li><a href="">Identificarse como usuario</a></li>
+              <li><a href="">Vincular el ordenador con GitHub por SSH</a></li>
+            </ul>
+          </li>
+          <li><a href="#dos">Trabajar con GitHub</a>
+            <ul>
+              <li><a href="">Crear repositorio en GitHub</a></li>
+              <li><a href="">Crear repositorio en local</a></li>
+              <li><a href="">Enlazar repositorio local con GitHub</a></li>
+              <li><a href="">Hacer cambios en el repositorio local</a></li>
+              <li><a href="">Hacer un commit es como pegar un tiro</a></li>
+              <li><a href="">Mandar los cambios a GitHub</a></li>
+            </ul>
+          </li>
+          <li><a href="#dos">Colaborar con GitHub</a>
+            <ul>
+              <li><a href="">Hacer Fork a un proyecto</a></li>
+              <li><a href="">Clonar el proyecto en local</a></li>
+              <li><a href="">Hacer cambios en local</a></li>
+              <li><a href="">Mandar los cambios a GitHub</a></li>
+              <li><a href="">Hacer un Pull request</a></li>
+            </ul>
+          </li>
+          <li><a href="#dos">Hacer merge con GitHub</a>
+            <ul>
+              <li><a href="">Localizar Pull request</a></li>
+              <li><a href="">Hacer Merge</a></li>
+            </ul>
+          </li>
+          <li><a href="#uno">Usar subdominio de GitHub</a></li>
+          <li><a href="#uno">Instalar GitHub en el servidor</a></li>
+          <li><a href="#uno">Usar GitHub con Sublime Text</a></li>
+          <li><a href="#uno">Fuentes de interés</a></li>
         </ul>
     </nav>
   </header> 
@@ -119,6 +162,74 @@
     </article>
     <article>
       <h1 id="dos">Empezando con GitHub</h1>
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architectoFugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
+        </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>   
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+      <p>Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p> 
+
+      <h2><span>Instalar</span> GitHub</h2>
+      <ul>
+        <li>Descargar GitHub para tu SO</li>
+        <li>Comprovar que se ha instalado GitHub en el ordenador</li>
+      </ul>
+
+      <!-- Terminal -->
+      <figure>
+        <div class='terminal'>
+          <div class="barra">
+            <pre id='barra'>Terminal</pre>
+          </div>
+          <div id='maquina'>
+            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exto</pre>
+          </div>
+          <div class="nota">
+            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+          </div>
+        </div>
+      </figure>
+      <!--/ Terminal -->
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aliquid cum dolores. Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto.Amet, saepe, at, vel ullam totam officiis suscipit culpa dolor iste fuga neque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto eque veniam cum doloribus molestiae odio fugit ipsa adipisci! Earum, iste, eligendi iusto quia voluptas odit laboriosam voluptatibus!</p>  
+
+      <!-- Botones sociales -->
+      <div class='social'>
+        <div class='boton_twitter'>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+        <div class='boton_google'>
+          <div class="g-plusone" data-size="medium" data-href="http://asiestudio.site88.net/git"></div>
+        </div>
+      </div>
+      <!--/ Botones sociales -->
+    </article>
+    <article>
+      <h1 id="tres">Empezando con GitHub</h1>
       <h2><span>Instalar</span> GitHub</h2>
       <ul>
         <li>Descargar GitHub para tu SO</li>
