Optimización de la lista para estilarla mejor

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -43,49 +43,31 @@
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Descripción de la guía</a></li>
-          <li><a href="#dos">Comandos básicos de terminal</a>
-            <ul>
-              <li><a href="#tres">Ver contenido del directorio</a></li>
-              <li><a href="">Hubicarse en un directorio</a></li>
-              <li><a href="">Crear nuevo directorio</a></li>
-            </ul>
-          </li>
-          <li><a href="#dos">Empezar con GitHub</a>
-            <ul>
-              <li><a href="">Crear una cuenta en GitHub</a></li>
-              <li><a href="">Instalar GitHub</a></li>
-              <li><a href="">Identificarse como usuario</a></li>
-              <li><a href="">Vincular el ordenador con GitHub por SSH</a></li>
-            </ul>
-          </li>
-          <li><a href="#dos">Trabajar con GitHub</a>
-            <ul>
-              <li><a href="">Crear repositorio en GitHub</a></li>
-              <li><a href="">Crear repositorio en local</a></li>
-              <li><a href="">Enlazar repositorio local con GitHub</a></li>
-              <li><a href="">Hacer cambios en el repositorio local</a></li>
-              <li><a href="">Hacer un commit es como pegar un tiro</a></li>
-              <li><a href="">Mandar los cambios a GitHub</a></li>
-            </ul>
-          </li>
-          <li><a href="#dos">Colaborar con GitHub</a>
-            <ul>
-              <li><a href="">Hacer Fork a un proyecto</a></li>
-              <li><a href="">Clonar el proyecto en local</a></li>
-              <li><a href="">Hacer cambios en local</a></li>
-              <li><a href="">Mandar los cambios a GitHub</a></li>
-              <li><a href="">Hacer un Pull request</a></li>
-            </ul>
-          </li>
-          <li><a href="#dos">Hacer merge con GitHub</a>
-            <ul>
-              <li><a href="">Localizar Pull request</a></li>
-              <li><a href="">Hacer Merge</a></li>
-            </ul>
-          </li>
-          <li><a href="#uno">Usar subdominio de GitHub</a></li>
-          <li><a href="#uno">Instalar GitHub en el servidor</a></li>
-          <li><a href="#uno">Usar GitHub con Sublime Text</a></li>
+          <li>Comandos básicos de terminal</li>
+          <li><a href="#tres">Ver contenido del directorio</a></li>
+          <li><a href="">Hubicarse en un directorio</a></li>
+          <li><a href="">Crear nuevo directorio</a></li>
+          <li>Empezar con GitHub</li>
+          <li><a href="">Crear una cuenta en GitHub</a></li>
+          <li><a href="">Instalar GitHub</a></li>
+          <li><a href="">Identificarse como usuario</a></li>
+          <li><a href="">Vincular el ordenador con GitHub por SSH</a></li>
+          <li>Trabajar con GitHub</li>
+          <li><a href="">Crear repositorio en GitHub</a></li>
+          <li><a href="">Crear repositorio en local</a></li>
+          <li><a href="">Enlazar repositorio local con GitHub</a></li>
+          <li><a href="">Hacer cambios en el repositorio local</a></li>
+          <li><a href="">Hacer un commit es como pegar un tiro</a></li>
+          <li><a href="">Mandar los cambios a GitHub</a></li>
+          <li>Colaborar con GitHub</li>
+          <li><a href="">Hacer Fork a un proyecto</a></li>
+          <li><a href="">Clonar el proyecto en local</a></li>
+          <li><a href="">Hacer cambios en local</a></li>
+          <li><a href="">Mandar los cambios a GitHub</a></li>
+          <li><a href="">Hacer un Pull request</a></li>
+          <li>Hacer Merge con GitHub</li>
+          <li><a href="">Localizar Pull request</a></li>
+          <li><a href="">Hacer Merge</a></li>
           <li><a href="#uno">Fuentes de interés</a></li>
         </ul>
     </nav>
