Añadido Disqus para los comentarios

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -124,6 +124,10 @@
         </div>
       </div>
       <!--/ Botones sociales -->
+      <div class="comentario">
+        <div id="disqus_thread"></div>
+      </div>
+
     </article>
     <article>
       <h1 id="dos">Empezando con GitHub</h1>
