Varias mejoras de estilo en la terminal y añadido leyenda

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -22,7 +22,6 @@
      <h1>IniciaGit</h1>
      <h2>Hacer un commit es como pegar un tiro </h2>
     </figure>
-
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Descripción de la guía</a></li>
@@ -72,10 +71,21 @@
             <pre id='barra'>Terminal</pre>
           </div>
           <div id='maquina'>
-            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architectoFugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exercitationem officiis vitae architecto</pre>
+            <pre>Last login: Wed Nov  6 11:48:18 on console
+iMac-de-Jordi:~ jordiimac$ <span class='tipear'>git --version</span>
+xcode-select: note: no developer tools were found at '/Applications/Xcode.app', <span class='copiar'>requesting install. Choose an option in the dialog to download the command line developer tools.</span>
+iMac-de-Jordi:~ jordiimac$ </pre>
           </div>
           <div class="nota">
-            <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
+            <div class="color_maquina">
+              <p><span>Texto</span> máquina devuleve.</p>
+            </div>
+            <div class="color_tipear">
+              <p><span>Texto</span> tu tipeas.</p>
+            </div>
+            <div class="color_copiar">
+              <p><span>Texto</span> a copiar.</p>
+            </div>
           </div>
         </div>
       </figure>
@@ -102,7 +112,10 @@
             <pre id='barra'>Terminal</pre>
           </div>
           <div id='maquina'>
-            <pre>Fugiat, quis aliquid earum nihil rem consectetur sint voluptates asperiores impedit dolorum placeat assumenda exto</pre>
+            <pre>Last login: Wed Nov  6 11:48:18 on console
+iMac-de-Jordi:~ jordiimac$ <span class='tipear'>git --version</span>
+xcode-select: note: no developer tools were found at '/Applications/Xcode.app', requesting install. Choose an option in the dialog to download the command line developer tools.
+iMac-de-Jordi:~ jordiimac$ </pre>
           </div>
           <div class="nota">
             <p><span>Nota </span>que el verde claro es lo que tu debes tipear.</p>
@@ -123,6 +136,7 @@
           <div class="g-plusone" data-size="medium" data-href="http://asiestudio.site88.net/git"></div>
         </div>
       </div>
+
       <!--/ Botones sociales -->
       <div class="comentario">
         <div id="disqus_thread"></div>
