Varias mejoras de estilo en el manú vista escritorio

--- a/produccion/index.html
+++ b/produccion/index.html
@@ -25,32 +25,33 @@
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Descripción de la guía</a></li>
-          <li id='titulo'>Comandos básicos de terminal</li>
+          <li id='uno'>Comandos básicos de terminal</li>
           <li><a href="#tres">Ver contenido del directorio</a></li>
           <li><a href="">Hubicarse en un directorio</a></li>
           <li><a href="">Crear nuevo directorio</a></li>
-          <li id='titulo'>Empezar con GitHub</li>
+          <li id='dos'>Empezar con GitHub</li>
           <li><a href="">Crear una cuenta en GitHub</a></li>
           <li><a href="">Instalar GitHub</a></li>
           <li><a href="">Identificarse como usuario</a></li>
           <li><a href="">Vincular el ordenador con GitHub por SSH</a></li>
-          <li id='titulo'>Trabajar con GitHub</li>
+          <li id='tres'>Trabajar con GitHub</li>
           <li><a href="">Crear repositorio en GitHub</a></li>
           <li><a href="">Crear repositorio en local</a></li>
           <li><a href="">Enlazar repositorio local con GitHub</a></li>
           <li><a href="">Hacer cambios en el repositorio local</a></li>
           <li><a href="">Hacer un commit es como pegar un tiro</a></li>
           <li><a href="">Mandar los cambios a GitHub</a></li>
-          <li id='titulo'>Colaborar con GitHub</li>
+          <li id='cuatro'>Colaborar con GitHub</li>
           <li><a href="">Hacer Fork a un proyecto</a></li>
           <li><a href="">Clonar el proyecto en local</a></li>
           <li><a href="">Hacer cambios en local</a></li>
           <li><a href="">Mandar los cambios a GitHub</a></li>
           <li><a href="">Hacer un Pull request</a></li>
-          <li id='titulo'>Hacer Merge con GitHub</li>
+          <li id='cinco'>Hacer Merge con GitHub</li>
           <li><a href="">Localizar Pull request</a></li>
           <li><a href="">Hacer Merge</a></li>
-          <li><a href="#uno">Fuentes de interés</a></li>
+          <li id='fuentes'><a href="#uno">Fuentes de interés</a></li>
+          <li id='contacto'><a href="#uno">Contacto</a></li>
         </ul>
     </nav>
   </header> 
@@ -78,10 +79,10 @@ iMac-de-Jordi:~ jordiimac$ </pre>
           </div>
           <div class="nota">
             <div class="color_maquina">
-              <p><span>Texto</span> máquina devuleve.</p>
+              <p><span>Texto</span> máquina.</p>
             </div>
             <div class="color_tipear">
-              <p><span>Texto</span> tu tipeas.</p>
+              <p><span>Texto</span> a tipear.</p>
             </div>
             <div class="color_copiar">
               <p><span>Texto</span> a copiar.</p>
