--- a/produccion/index.html
+++ b/produccion/index.html
@@ -26,29 +26,29 @@
     <nav class="menu">
         <ul id='mobileMenu'>
           <li><a href="#uno">Descripción de la guía</a></li>
-          <li id='uno'>Comandos básicos de terminal</li>
+          <li id='titulo'>Comandos básicos de terminal</li>
           <li><a href="#tres">Ver contenido del directorio</a></li>
           <li><a href="">Hubicarse en un directorio</a></li>
           <li><a href="">Crear nuevo directorio</a></li>
-          <li id='dos'>Empezar con GitHub</li>
+          <li id='titulo'>Empezar con GitHub</li>
           <li><a href="">Crear una cuenta en GitHub</a></li>
           <li><a href="">Instalar GitHub</a></li>
           <li><a href="">Identificarse como usuario</a></li>
           <li><a href="">Vincular el ordenador con GitHub por SSH</a></li>
-          <li id='tres'>Trabajar con GitHub</li>
+          <li id='titulo'>Trabajar con GitHub</li>
           <li><a href="">Crear repositorio en GitHub</a></li>
           <li><a href="">Crear repositorio en local</a></li>
           <li><a href="">Enlazar repositorio local con GitHub</a></li>
           <li><a href="">Hacer cambios en el repositorio local</a></li>
           <li><a href="">Hacer un commit es como pegar un tiro</a></li>
           <li><a href="">Mandar los cambios a GitHub</a></li>
-          <li id='cuatro'>Colaborar con GitHub</li>
+          <li id='titulo'>Colaborar con GitHub</li>
           <li><a href="">Hacer Fork a un proyecto</a></li>
           <li><a href="">Clonar el proyecto en local</a></li>
           <li><a href="">Hacer cambios en local</a></li>
           <li><a href="">Mandar los cambios a GitHub</a></li>
           <li><a href="">Hacer un Pull request</a></li>
-          <li id='cinco'>Hacer Merge con GitHub</li>
+          <li id='titulo'>Hacer Merge con GitHub</li>
           <li><a href="">Localizar Pull request</a></li>
           <li><a href="">Hacer Merge</a></li>
           <li id='fuentes'><a href="#uno">Fuentes de interés</a></li>
