--- a/index.html
+++ b/index.html
@@ -16,29 +16,47 @@
 <!-- Barra lateral con logo + menu -->
 <header id="header">
 	<figure id="logo">
-		
+		<img src="img/logo.png" width='245' height='200'alt="IniciaGit | Logo">
 	</figure>
+	<div id='titulo_principal'>
+		<h1>IniciaGit</h1>
+ 		<h2>Hacer un commit es como pegar un tiro</h2>
+	</div>
 	<nav id="menu">
-		
+		<ul class="mobileMenu">
+			<li><a href="descripcion">Descripción de la guía</a></li>
+		</ul>
 	</nav>
 </header>
 <!--/ Barra lateral con logo + menu -->
 <!-- Contenido princial -->
 <section id="contenido">
-	<article id="uno">
+	<article id="descripcion">
 		<header class="titulo">
+			<h1>Descripción de la guía</h1>
+		</header>
+		<div class="contenido">
+			<div class="texto">
+				<p>Esta guía básica te ayudará a usar GitHub con la terminal desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+				<p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. Trabajarás en colaboración con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+				<p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+			</div>
+		</div>
+	</article>
+	<article id="">
+		<header class="">
 			<h1></h1>
 			<h2></h2>
 		</header>
 		<div class="contenido">
 			<div class="terminal">
-				
 			</div>
 		</div>
 		<footer class="social">
 			
 		</footer>
 	</article>
+
 </section>
 <!--/ Contenido princial -->
 <!-- Footer principal -->
